@@ -1,0 +1,49 @@
+/**
+ * @file QGaimPrefsWindow.h Preferences window
+ *
+ * @Copyright (C) 2003 Christian Hammond.
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
+ * the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public
+ * License along with this program; if not, write to the Free
+ * Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
+ * MA  02111-1307  USA
+ */
+#ifndef _QGAIM_PREFS_DIALOG_H_
+#define _QGAIM_PREFS_DIALOG_H_
+
+class QGaimTabWidget;
+
+class QGaimPrefsDialog : public QDialog
+{
+	Q_OBJECT
+
+	public:
+		QGaimPrefsDialog(QWidget *parent = NULL, const char *name = NULL,
+						 WFlags fl = 0);
+		~QGaimPrefsDialog();
+
+	protected:
+		void buildInterface();
+
+		QWidget *buildBuddyListTab();
+		QWidget *buildConversationsTab();
+		QWidget *buildNotificationTab();
+		QWidget *buildAwayIdleTab();
+		QWidget *buildProxyTab();
+		QWidget *buildPluginsTab();
+
+	private:
+		QGaimTabWidget *tabs;
+};
+
+#endif /* _QGAIM_PREFS_DIALOG_H_ */
